2005-02-24  Jordi Mas i Hernandez <jordi@ximian.com>

	* Control.cs: Call DefWndProc at WM_PAINT only if UserPaint not defined
	* GroupBox.cs: Add control styles
	* Label.cs: Add control styles	
	* UpDownBase.cs: Add control styles
	* ListBox.cs: Add control styles
	* XplatUIWin32.cs: Fixes wrong parameter order


2005-02-23  Chris Bacon  <chris.bacon@docobo.co.uk>

	* ListView.cs: Assign owner for ColumnHeader. Patch by Chris Bacon

2005-02-23  Jackson Harper  <jackson@ximian.com>

	* PropertyManager.cs: Implement property binding. This doesn't
	seem to work yet though as (I think) there are some bugs in
	System.ComponentModel.PropertyDescriptor.
	* BindingContext.cs: Use new PropertyManager constructor.

2005-02-23  Jordi Mas i Hernandez <jordi@ximian.com>

	* ProgressBar.cs: use clip region in ProgressBar
	* ThemeWin32Classic.cs: use clip region in ProgressBar

2004-02-22  Jackson Harper  <jackson@ximian.com>

	* BindingsCollection.cs: Remove some debug code.

2005-02-22  Jackson Harper  <jackson@ximian.com>

	* BindingContext.cs:
	* ControlBindingsCollection.cs:
	* CurrencyManager.cs:
	* Binding.cs:
	* BindingManagerBase.cs: Initial implementation
	* BindingsCollection.cs: Add an internal contains method that the
	BindingManagerBase uses to ensure bindings aren't added twice to
	the collection.
	* PropertyManager.cs: Stubbed out.
	* Control.cs: 
	* ContainerControl.cs: Hook up databinding
	
2005-02-22  Geoff Norton  <gnorton@customerdna.com>

	* XplatUIOSX.cs:
	  OSXStructs.cs: Refactored to handle the new Hwnd NC logic area.
	  Fixed Invalidate/Update chain.
	  Fixed tons of other minor bugs (this is almost a complete rewrite).

2005-02-22  Jordi Mas i Hernandez <jordi@ximian.com>

	* ComboBox.cs: do subcontrol creation when the control is created

2005-02-19  Jordi Mas i Hernandez <jordi@ximian.com>

	* Label.cs: fixes image drawing (image and imagelist)
	* ThemeWin32Classic.cs: cache brushes
	
2005-02-19  Jordi Mas i Hernandez <jordi@ximian.com>
